[gd_scene load_steps=37 format=3 uid="uid://dbn2fcne2kbxm"]

[ext_resource type="FontFile" uid="uid://cuedit6mofbc7" path="res://fonts/Oswald-Regular.ttf" id="1_af32l"]
[ext_resource type="Script" uid="uid://bol7sd2jni3kp" path="res://scripts/LineEdit.gd" id="1_hothc"]
[ext_resource type="Script" uid="uid://drgaxqavvqewc" path="res://scripts/game.gd" id="1_k0oco"]
[ext_resource type="Texture2D" uid="uid://38b7uiombv1i" path="res://assets/panel_ground.png" id="2_g7tbj"]
[ext_resource type="Texture2D" uid="uid://dbqlo4xfgpsti" path="res://assets/background.png" id="3_0p1jm"]
[ext_resource type="FontFile" uid="uid://c7fjr8u8dk58u" path="res://fonts/Oswald-VariableFont_wght.ttf" id="4_fvjdd"]
[ext_resource type="Texture2D" uid="uid://cbkfwvyqqktoh" path="res://assets/input_area.png" id="5_1wbqd"]
[ext_resource type="PackedScene" uid="uid://btlywuhhfxhue" path="res://scenes/info.tscn" id="7_mkhgp"]
[ext_resource type="Texture2D" uid="uid://c6x7foqce4p3p" path="res://assets/refresh 2.png" id="8_tun8x"]
[ext_resource type="AudioStream" uid="uid://je56yuspmr2j" path="res://sounds/click.mp3" id="10_4nj0u"]
[ext_resource type="Texture2D" uid="uid://cajuk5gipq1td" path="res://assets/Animation window (1).png" id="11_yamwt"]
[ext_resource type="Texture2D" uid="uid://dvv3u7aygsb14" path="res://assets/x0.25.png" id="12_b30va"]
[ext_resource type="Texture2D" uid="uid://banjqlgmyrvb" path="res://assets/x0.25 (1).png" id="13_aun0h"]
[ext_resource type="Texture2D" uid="uid://bdvbvr143cer3" path="res://assets/x1.0.png" id="13_qc2m1"]
[ext_resource type="Texture2D" uid="uid://fjhoj2p2u44o" path="res://assets/x1.5.png" id="14_e0abg"]
[ext_resource type="Texture2D" uid="uid://nblvqfbidyy" path="res://assets/x2.0.png" id="15_q0myx"]
[ext_resource type="Texture2D" uid="uid://ce1wiqav6w6m" path="res://assets/x1.0 (1).png" id="16_6610i"]
[ext_resource type="Texture2D" uid="uid://bayxcpanh6igg" path="res://assets/speedometer 2.png" id="17_6ich0"]
[ext_resource type="Texture2D" uid="uid://raegxwdcg7ah" path="res://assets/x1.5 (1).png" id="18_wf66p"]
[ext_resource type="Texture2D" uid="uid://b7uwl6bo7f2eq" path="res://assets/x2.0 (1).png" id="20_38uin"]
[ext_resource type="Texture2D" uid="uid://bjlc36uw0fef" path="res://assets/algorithm (3) 2.png" id="21_uijmx"]
[ext_resource type="Texture2D" uid="uid://btu75lmaju2sm" path="res://assets/menuBG.png" id="22_b70sw"]
[ext_resource type="Texture2D" uid="uid://oafthldre56y" path="res://assets/hover.png" id="23_lfeys"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mohrj"]
content_margin_left = 8.0
texture = ExtResource("2_g7tbj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_32wl7"]
texture = ExtResource("3_0p1jm")
region_rect = Rect2(3, 0.588997, 1383, 668)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i4524"]
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_bottom = 20.0
texture = ExtResource("5_1wbqd")
region_rect = Rect2(-1.5, -3, 1386, 103)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xla4k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h6ny0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2q3sr"]
bg_color = Color(0.301961, 0.0901961, 0.721569, 0.52549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxg7b"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.654902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f7t62"]
bg_color = Color(0.301961, 0.0901961, 0.721569, 0.384314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rtk2"]
bg_color = Color(0.301961, 0.0901961, 0.721569, 0.52549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q85cv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fhrb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7j81"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulthw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0oco")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mohrj")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -16

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_32wl7")

[node name="CenterContainer" type="MarginContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/GameInfo/CenterContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 110
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
theme_override_constants/margin_bottom = 24

[node name="Label" type="Label" parent="Background/MarginContainer/Rows/GameInfo/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.619608, 0.47451, 0.92549, 1)
theme_override_fonts/font = ExtResource("1_af32l")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_i4524")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.619608, 0.47451, 0.929412, 1)
theme_override_fonts/font = ExtResource("1_af32l")
theme_override_font_sizes/font_size = 50
text = " > "

[node name="LineEdit" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.643137, 0.466667, 0.956863, 1)
theme_override_colors/font_placeholder_color = Color(0.647059, 0.466667, 0.956863, 1)
theme_override_fonts/font = ExtResource("1_af32l")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_xla4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h6ny0")
placeholder_text = "Enter Your Numbers"
script = ExtResource("1_hothc")

[node name="algo_option" type="OptionButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.249132
anchor_top = 0.313272
anchor_right = -0.039931
anchor_bottom = 0.399692
offset_left = -1.52588e-05
grow_horizontal = 0
theme_override_colors/font_color = Color(0.627451, 0.552941, 0.752941, 1)
theme_override_fonts/font = ExtResource("4_fvjdd")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_2q3sr")
theme_override_styles/normal = SubResource("StyleBoxFlat_bxg7b")
theme_override_styles/hover = SubResource("StyleBoxFlat_f7t62")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1rtk2")
allow_reselect = true
metadata/_edit_use_anchors_ = true

[node name="reset" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 28.0
offset_right = -94.0
offset_bottom = 104.0
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_q85cv")
theme_override_styles/hover = SubResource("StyleBoxFlat_5fhrb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i7j81")
theme_override_styles/focus = SubResource("StyleBoxFlat_ulthw")
icon = ExtResource("8_tun8x")
flat = true
alignment = 2

[node name="info" parent="." instance=ExtResource("7_mkhgp")]
position = Vector2(1048, 29)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4nj0u")

[node name="speed" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -257.0
offset_top = 29.0
offset_right = -184.0
offset_bottom = 102.0
grow_horizontal = 0
icon = ExtResource("17_6ich0")
flat = true

[node name="SpeedMenu" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -609.0
offset_top = 110.0
offset_right = -238.0
offset_bottom = 307.0
grow_horizontal = 0
texture = ExtResource("11_yamwt")
expand_mode = 1

[node name="x25" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 22.0
offset_top = 82.0
offset_right = 81.0
offset_bottom = 127.0
texture_normal = ExtResource("12_b30va")
texture_hover = ExtResource("13_aun0h")
stretch_mode = 0

[node name="x1" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 99.0
offset_top = 81.0
offset_right = 158.0
offset_bottom = 126.0
texture_normal = ExtResource("13_qc2m1")
texture_hover = ExtResource("16_6610i")
stretch_mode = 0

[node name="x1_5" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 173.0
offset_top = 80.0
offset_right = 232.0
offset_bottom = 125.0
texture_normal = ExtResource("14_e0abg")
texture_hover = ExtResource("18_wf66p")
stretch_mode = 0

[node name="x2" type="TextureButton" parent="SpeedMenu"]
layout_mode = 0
offset_left = 251.0
offset_top = 79.0
offset_right = 310.0
offset_bottom = 124.0
texture_normal = ExtResource("15_q0myx")
texture_hover = ExtResource("20_38uin")
stretch_mode = 0

[node name="AlgoIcon" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 62.0
offset_top = 24.0
offset_right = 138.0
offset_bottom = 100.0
icon = ExtResource("21_uijmx")
flat = true

[node name="MenuOptions" type="TextureRect" parent="."]
visible = false
layout_mode = 1
offset_left = -24.0
offset_top = 125.0
offset_right = 342.0
offset_bottom = 583.0
texture = ExtResource("22_b70sw")

[node name="SelectionSort" type="TextureButton" parent="MenuOptions"]
layout_mode = 2
offset_left = 102.0
offset_top = 13.0
offset_right = 225.0
offset_bottom = 53.0
scale = Vector2(1.3, 1.2)
texture_hover = ExtResource("23_lfeys")
ignore_texture_size = true

[node name="Label" type="Label" parent="MenuOptions/SelectionSort"]
layout_mode = 0
offset_left = 10.7692
offset_top = 4.16667
offset_right = 123.769
offset_bottom = 28.1667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Selection Sort"

[node name="BubbleSort" type="TextureButton" parent="MenuOptions"]
layout_mode = 2
offset_left = 101.0
offset_top = 153.0
offset_right = 224.0
offset_bottom = 193.0
scale = Vector2(1.3, 1.2)
texture_hover = ExtResource("23_lfeys")
ignore_texture_size = true

[node name="Label" type="Label" parent="MenuOptions/BubbleSort"]
layout_mode = 0
offset_left = 10.7692
offset_top = 4.16667
offset_right = 123.769
offset_bottom = 28.1667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Bubble Sort"

[node name="InsertionSort" type="TextureButton" parent="MenuOptions"]
layout_mode = 2
offset_left = 101.0
offset_top = 108.0
offset_right = 224.0
offset_bottom = 148.0
scale = Vector2(1.3, 1.2)
texture_hover = ExtResource("23_lfeys")
ignore_texture_size = true

[node name="Label" type="Label" parent="MenuOptions/InsertionSort"]
layout_mode = 0
offset_left = 10.7692
offset_top = 4.16667
offset_right = 123.769
offset_bottom = 28.1667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Insertion sort"

[node name="QuickSort" type="TextureButton" parent="MenuOptions"]
layout_mode = 2
offset_left = 102.0
offset_top = 59.0
offset_right = 225.0
offset_bottom = 99.0
scale = Vector2(1.3, 1.2)
texture_hover = ExtResource("23_lfeys")
ignore_texture_size = true

[node name="Label" type="Label" parent="MenuOptions/QuickSort"]
layout_mode = 0
offset_left = 10.7692
offset_top = 4.16667
offset_right = 123.769
offset_bottom = 28.1667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Quick Sort"

[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/LineEdit" to="Background/MarginContainer/Rows/InputArea/HBoxContainer/LineEdit" method="_on_text_submitted"]
[connection signal="item_selected" from="algo_option" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="algo_option" to="." method="_on_algo_option_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_button_pressed"]
[connection signal="pressed" from="speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="SpeedMenu/x25" to="." method="_on_x_25_pressed"]
[connection signal="pressed" from="SpeedMenu/x1" to="." method="_on_x_1_pressed"]
[connection signal="pressed" from="SpeedMenu/x1_5" to="." method="_on_x_1_5_pressed"]
[connection signal="pressed" from="SpeedMenu/x2" to="." method="_on_x_2_pressed"]
[connection signal="pressed" from="AlgoIcon" to="." method="_on_algo_icon_pressed"]
[connection signal="pressed" from="MenuOptions/SelectionSort" to="." method="_on_selection_sort_pressed"]
[connection signal="pressed" from="MenuOptions/BubbleSort" to="." method="_on_bubble_sort_pressed"]
[connection signal="pressed" from="MenuOptions/InsertionSort" to="." method="_on_insertion_sort_pressed"]
[connection signal="pressed" from="MenuOptions/QuickSort" to="." method="_on_quick_sort_pressed"]
